--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,13 @@ allprojects {
         // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
         // See https://docs.gradle.org/current/userguide/declaring_repositories.html
         // for more information about repositories.
+        maven {
+            url "https://maven.pkg.github.com/soir20/MoreMcmeta/"
+            credentials {
+                username "soir20"
+                password project.moremcmetaMavenPass
+            }
+        }
     }
 
     tasks.withType(JavaCompile) {
