--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,13 @@ This is an example description! Tell everyone what your mod is about!
 #logoFile = ""
 
 [[dependencies.myplugin]]
+modId = "moremcmeta"
+mandatory = true
+versionRange = ","
+ordering = "NONE"
+side = "CLIENT"
+
+[[dependencies.myplugin]]
 modId = "forge"
 mandatory = true
 versionRange = "[41,)"
