--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version=1.19
-enabled_platforms=fabric,forge
+minecraft_version = 1.19
+enabled_platforms = fabric,forge
 
-archives_base_name=myplugin
-mod_version=1.0.0
-maven_group=io.github.myplugin
+archives_base_name = myplugin
+mod_version = 1.0.0
+maven_group = io.github.myplugin
 
-moremcmeta_version=5.7.28
+moremcmeta_version = 1.19-main-SNAPSHOT
 
-fabric_loader_version=0.14.8
-fabric_api_version=0.57.0+1.19
+fabric_loader_version = 0.14.8
+fabric_api_version = 0.57.0+1.19
 
-forge_version=1.19-41.0.63
+forge_version = 1.19-41.0.63
 
 # fabricCurseForgeId = 12345
 # forgeCurseForgeId = 12345
