--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ mod_version = 1.0.0
 maven_group = io.github.myplugin
 
 moremcmeta_version = 1.19-main-SNAPSHOT
+moremcmeta_min_version = *
 
 fabric_loader_version = 0.14.8
 fabric_api_version = 0.57.0+1.19
