--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -43,7 +43,7 @@ shadowJar {
 }
 
 remapJar {
-    input.set shadowJar.archiveFile
+    inputFile.set shadowJar.archiveFile
     dependsOn shadowJar
     classifier null
 }
