--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ archives_base_name = myplugin
 mod_version = 1.0.0
 maven_group = io.github.myplugin
 
-moremcmeta_version = 1.19-main-SNAPSHOT
+moremcmeta_version = 1.19-1.19-SNAPSHOT
 moremcmeta_min_version = *
 
 fabric_loader_version = 0.14.8
