Add CurseForge and Modrinth section templates

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,8 @@ org.gradle.jvmargs=-Xmx2048M
 minecraft_version = 1.19.2
 enabled_platforms = fabric,forge
 
+java_version = 17
+
 archives_base_name = myplugin
 mod_version = 1.0.0
 maven_group = io.github.myplugin
@@ -24,8 +26,8 @@ fabric_api_version = 0.60.0+1.19.2
 forge_version = 1.19.2-43.1.1
 
 # IDs of your projects on CurseForge
-# fabricCurseForgeId = 12345
-# forgeCurseForgeId = 12345
+fabric_curseforge_id = 12345
+forge_curseforge_id = 12345
 
 # ID of your project on Modrinth
-# modrinthId = myplugin
+modrinth_id = myplugin
