--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
     // Do NOT use other classes from fabric loader
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
-    //modApi "dev.architectury:architectury:${rootProject.moremcmeta_version}"
+    modImplementation "io.github.moremcmeta:moremcmeta-common:${rootProject.moremcmeta_version}"
 }
 
 publishing {
