--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ java_version = 17
 
 archives_base_name = myplugin
 mod_version = 1.0.0
-maven_group = io.github.myplugin
+maven_group = io.github.myorg
 
 # MoreMcmeta version to use for development. If you are not developing a
 # default plugin, use a stable release version instead.
