--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.jvmargs=-Xmx2048M
 
-minecraft_version = 1.19.2
+minecraft_version = 1.20.1
 enabled_platforms = fabric,forge
 
 java_version = 17
@@ -11,7 +11,7 @@ maven_group = io.github.myorg
 
 # MoreMcmeta version to use for development. If you are not developing a
 # default plugin, use a stable release version instead.
-moremcmeta_version = 1.19-1.19-SNAPSHOT
+moremcmeta_version = 1.20.1-4.x-1.20-SNAPSHOT
 
 # Minimum MoreMcmeta version that users can install. This should be at
 # least 4.0.0 for the corresponding Minecraft version if this plugin is
@@ -19,11 +19,11 @@ moremcmeta_version = 1.19-1.19-SNAPSHOT
 moremcmeta_min_version = *
 
 # Fabric loader and API versions to use for development
-fabric_loader_version = 0.14.9
-fabric_api_version = 0.60.0+1.19.2
+fabric_loader_version = 0.14.21
+fabric_api_version = 0.83.0+1.20.1
 
 # Forge version to use for development
-forge_version = 1.19.2-43.1.1
+forge_version = 1.20.1-47.0.1
 
 # IDs of your projects on CurseForge
 fabric_curseforge_id = 12345
